--- a/config.json
+++ b/config.json
@@ -313,12 +313,12 @@
       "dependencies": [],
       "config": {
         "use_spdlog": false,
-        "log_path": "",
+        "log_path": "./",
         "log_format": "",
         "log_file": "access.log",
         "log_size_limit": 0,
         "use_local_time": true,
-        "log_index": 0,
+        "log_index": 0
         // "show_microseconds": true,
         // "custom_time_format": "",
         // "use_real_ip": false
